# Agent-Framework-Demo

./: .gitignore  Agent-Framework-Demo.sln  README.md
setup/: config.ps1.sample  prep-project.ps1  setup.ps1
src/Demo001_JokerAgentDemo/C#/: JokerAgentDemo.csproj  Program.cs
src/Demo002_LightPluginDemo/C#/: LightPlugin.cs  LightPluginDemo.csproj  Program.cs
src/Demo003_HumanInTheLoopDemo/C#/: HumanInTheLoopDemo.csproj  LightPlugin.cs  Program.cs
src/Demo004_MCPGitHubDemo/C#/: MCPGitHubDemo.csproj  Program.cs
src/Demo005_AgentObservabilityDemo/C#/: AgentObservabilityDemo.csproj  Program.cs
src/Demo006_WorkflowSequentialDemo/C#/: Program.cs  WorkflowSequentialDemo.csproj
src/Demo007_WorkflowConcurrentDemo/C#/: ConcurrentAggregationExecutor.cs  ConcurrentStartExecutor.cs  Program.cs  WorkflowConcurrentDemo.csproj
src/Demo008_WorkflowHandoffDemo/C#/: Program.cs  WorkflowHandoffDemo.csproj
src/Demo009_DevUI/python/: .env.sample  main.py  pyproject.toml
src/Demo010_DevUI_WorkflowDemo/python/: main.py  pyproject.toml
